--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>무주관광</title>
-    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
+    <link rel="stylesheet" href="css/xeicon.min.css">
     <link rel="stylesheet" href="css/aos.css">
     <link rel="stylesheet" href="css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/styles.css">
@@ -306,7 +306,7 @@
     <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/aos.js"></script>
     <script src="js/swiper-bundle.min.js"></script>
-    <script src="http://dapi.kakao.com/v2/maps/sdk.js?appkey=85d365901bccf1b4f1b4df423e2b97a1"></script>
+    <script src="http://dapi.kakao.com/v2/maps/sdk.js?appkey=7fe2758dd5447d1c6b6d5c34b4135c29"></script>
     <script src="js/jquery.js"></script>
     <script>
         
