--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>무주관광</title>
     <link rel="stylesheet" href="http://cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
-    <link rel="stylesheet" href="css/aos.css">
-    <link rel="stylesheet" href="css/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="http://unpkg.com/aos@2.3.1/dist/aos.css">
+    <link rel="stylesheet" href="http://unpkg.com/swiper/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
@@ -303,14 +303,11 @@
         </footer>
     </div>
     </div>
-    <script src="js/jquery-3.2.1.min.js"></script>
-    <script src="js/aos.js"></script>
-    <script src="js/swiper-bundle.min.js"></script>
-    <script src="http://dapi.kakao.com/v2/maps/sdk.js?appkey=7fe2758dd5447d1c6b6d5c34b4135c29"></script>
+    <script src="http://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="http://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script src="http://dapi.kakao.com/v2/maps/sdk.js?appkey=c8b90a53c7adebc323480ea5843020bd"></script>
     <script src="js/jquery.js"></script>
-    <script>
-        AOS.init();
-    </script>
 </body>
 
 </html>
