--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
     <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/aos.js"></script>
     <script src="js/swiper-bundle.min.js"></script>
-    <script src="http://dapi.kakao.com/v2/maps/sdk.js?appkey=c8b90a53c7adebc323480ea5843020bd"></script>
+    <script src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=c8b90a53c7adebc323480ea5843020bd"></script>
 
     <script type="text/javascript">
         var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
